tests/compile_fail/v3_iface_init_rejected.iron
interface Bad {
    init(x: Int)
}
